package s2c;
message error
{
	required int32 error_no = 1 ;
}